# n00bwork

./: Dockerfile  README.md  pyproject.toml
confluence-to-notion/: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
confluence-to-notion/.claude/: settings.json
confluence-to-notion/.claude/plans/: migration-test-automation.md
confluence-to-notion/docs/: migration-test-list.md
confluence-to-notion/notebooks/: confluence_dc_api_sample.ipynb  confluence_macro_survey.ipynb  notion_api_sample.ipynb
confluence-to-notion/src/confluence_to_notion/: migration.py
confluence-to-notion/src/confluence_to_notion/client/: confluence.py  notion.py
confluence-to-notion/src/confluence_to_notion/converter/: builder.py  mappings.py  parser.py
confluence-to-notion/tests/: conftest.py
confluence-to-notion/tests/e2e/: conftest.py  test_e2e_text.py
confluence-to-notion/tests/unit/: conftest.py  test_code.py  test_lists.py  test_macros.py  test_tables.py  test_text.py
confuluence-to-notion/: .env.example
jdsf-competition-data-analysis/: .dockerignore  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
jdsf-competition-data-analysis/.claude/: settings.json
jdsf-competition-data-analysis/.devcontainer/: devcontainer.json
jdsf-competition-data-analysis/docker/duckdb/: Dockerfile
jdsf-competition-data-analysis/docker/python/: Dockerfile
jdsf-competition-data-analysis/jdsf/: __init__.py  fetch.py  ids.py  loader.py  models.py  normalize.py
jdsf-competition-data-analysis/jdsf/parse/: __init__.py  document.py  header.py  judges.py  overall.py  per_dance.py  ranking.py  rounds.py
jdsf-competition-data-analysis/scripts/: fetch_one.py  ingest.py  init_db.py  schema.sql
jdsf-competition-data-analysis/tests/: conftest.py  test_ids.py  test_normalize.py  test_parse_header.py  test_parse_judges.py  test_parse_overall.py  test_parse_per_dance.py  test_parse_ranking.py  test_parse_round_details.py  test_parse_rounds.py
jdsf-competition-data-analysis/tests/fixtures/: R260416_03.html
notebooklm-cli/: docker-compose.yml  pyproject.toml
notebooklm-cli/.claude/: settings.json
notebooklm-cli/docker/python/: Dockerfile
notebooks/: intro.ipynb  topic_modeling_hotels.ipynb  topic_per_class_using_bertopic.ipynb
topic-per-class-using-bertopic/: .gitignore  CLAUDE.md  compose.yaml  pyproject.toml
topic-per-class-using-bertopic/.claude/: settings.json
topic-per-class-using-bertopic/.devcontainer/: devcontainer.json
topic-per-class-using-bertopic/notebooks/: test_tokenizers.ipynb  topic_modeling_hotels.ipynb  topic_modeling_using_llm.ipynb  (+2 more)
