[project]
name = "topic-per-class-using-bertopic"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bertopic[spacy]",
    "scikit-learn",
    "matplotlib",
    "ipykernel",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "seaborn>=0.13.2",
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
    "spacy>=3.8.11",
    "statsmodels>=0.14.6",
]
