[project]
name = "jdsf"
version = "0.1.0"
description = "Scrape and analyze JDSF DanceSport competition results"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2,<1.6",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "ipython>=8.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jdsf"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
